# probablyprofit

./: .env.example  .pre-commit-config.yaml  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  DEPLOY.md  KALSHI_GUIDE.md  PROMPT_ENGINEERING.md  README.md  SHARE.md  config.yaml  config.yaml.example  debug_task.md  index.html  linting_before_commit.ps1  mystrat.txt  pyproject.toml  quickstart.py  requirements.txt  setup_env.ps1  start-db.ps1  start-roocode-stack.ps1  tasklist.md  temp_save_config.py
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
assets/: index-Bgn5G2Ve.js  index-DDcSf57r.css
docs/: api-reference.md  filtering-guide.md  index.html
docs/assets/css/: style.css
docs/assets/js/: main.js
frontend/: index.html  vite.config.ts
frontend/public/: 404.html  CNAME  robots.txt  sitemap.xml
frontend/src/: App.tsx
frontend/src/components/: ErrorBoundary.tsx
poly16z/: .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  strategy.txt
poly16z/agent/: __init__.py  base.py  gemini_agent.py  openai_agent.py  strategy.py
poly16z/api/: client.py
poly16z/scripts/: cli.py  setup_wizard.py  test_strategies.py  verify_agents_loading.py  verify_api.py
poly16z/tests/: test_agent.py  test_api_live.py  test_backtest.py  test_risk.py
probablyprofit/: README.md  config.py  main.py  mkdocs.yml  pyproject.toml
probablyprofit/agent/: anthropic_agent.py  base.py  ensemble.py  fallback.py  formatters.py  gemini_agent.py  intelligence.py  mock_agent.py  openai_agent.py  strategy.py  strategy_version.py
probablyprofit/alerts/: telegram.py
probablyprofit/api/: async_wrapper.py  client.py  exceptions.py  kalshi_client.py  order_manager.py  platform.py  signer.py  websocket.py
probablyprofit/backtesting/: data.py  engine.py  metrics.py  optimizer.py
probablyprofit/cli/: __init__.py  main.py
probablyprofit/docs/: contributing.md  index.md
probablyprofit/docs/api/: cli.md  python.md
probablyprofit/docs/getting-started/: configuration.md  installation.md  quickstart.md
probablyprofit/docs/plugins/: creating.md  overview.md
probablyprofit/docs/strategies/: examples.md  writing.md
probablyprofit/plugins/: base.py  examples.py  hooks.py  registry.py
probablyprofit/plugins/community/: discord_plugin.py  twitter_sentiment.py
probablyprofit/risk/: manager.py  positions.py
probablyprofit/scripts/: setup_wizard.py  verify_agents_loading.py  verify_plugins.py
probablyprofit/sources/: aggregator.py  perplexity.py  reddit.py  sentiment.py  trends.py  twitter.py
probablyprofit/storage/: database.py  historical.py  models.py  repositories.py
probablyprofit/tests/: conftest.py  mock_exchange.py  test_agent.py  test_agent_comprehensive.py  test_agent_validation_retry.py  test_ai_rate_limiter.py  test_api_live.py  test_backtest.py  test_cache_thread_safety.py  test_client.py  test_config_validation.py  test_historical.py  test_integration.py  test_logging_redaction.py  test_market_filtering.py  test_order_manager.py  test_plugins.py  test_position_monitor.py  test_resilience.py  test_risk.py  test_secrets.py  test_strategies.py  test_strategy_version.py  test_validation_utils.py  test_validators_strategy.py  test_websocket.py
probablyprofit/trading/: paper.py  position_monitor.py
probablyprofit/utils/: ai_rate_limiter.py  cache.py  killswitch.py  logging.py  metrics.py  preflight.py  recovery.py  resilience.py  secrets.py  validation_utils.py  validators.py
probablyprofit/web/: app.py  dashboard.py
probablyprofit/web/api/: models.py  routes.py
probablyprofit/website/: index.html
probablyprofit/website/assets/css/: style.css
probablyprofit/website/assets/js/: main.js
